[package]
name = "c2a-devtools"
version = "0.1.0"
edition = "2021"
exclude = ["frontend/dist", "frontend/node_modules"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6", default-features = false }
rust-embed = "8.0.0"
mime_guess = "2.0.4"

tokio = { version = "1.0", optional = true, features = ["macros", "rt-multi-thread"] }
clap = { version = "4", optional = true, features = ["derive", "env"] }

[features]
default = ["bin"]
bin = ["dep:clap", "dep:tokio", "axum/http1", "axum/tokio"]
